syntax="proto3";

package qrtz_calendars;

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

message QrtzCalendar{
    string sched_name=1;
    string calendar_name=2;
    bytes calendar=3;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service QrtzCalendarService {
  rpc ListQrtzCalendars(ListQrtzCalendarsRequest) returns (ListQrtzCalendarsResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/QrtzCalendars"
    };
  }

  rpc GetQrtzCalendar(GetQrtzCalendarRequest) returns (QrtzCalendar) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=QrtzCalendars/*}"
    };
  }

  rpc CreateQrtzCalendar(CreateQrtzCalendarRequest) returns (QrtzCalendar) {
    option (google.api.http) = {
      post: "/v1alpha1/QrtzCalendars"
      body: "QrtzCalendar"
    };
  }

  rpc UpdateQrtzCalendar(UpdateQrtzCalendarRequest) returns (QrtzCalendar) {
    option (google.api.http) = {
      patch: "/v1alpha1/{QrtzCalendar.name=QrtzCalendars/*}"
      body: "QrtzCalendar"
    };
  }

  rpc DeleteQrtzCalendar(DeleteQrtzCalendarRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=QrtzCalendars/*}"
    };
  }
}

// message QrtzCalendar {
// ! This should be defined elsewhere
// }

message ListQrtzCalendarsRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListQrtzCalendarsResponse {
  // The field name should match the noun "QrtzCalendar" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated QrtzCalendar QrtzCalendars = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetQrtzCalendarRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateQrtzCalendarRequest {
  // The parent resource name where the QrtzCalendar is to be created.
  string parent = 1;

  // The QrtzCalendar id to use for this QrtzCalendar.
  string QrtzCalendar_id = 2;

  // The QrtzCalendar resource to create.
  // The field name should match the Noun in the method name.
  QrtzCalendar QrtzCalendar = 3;
}

message UpdateQrtzCalendarRequest {
  // The QrtzCalendar resource which replaces the resource on the server.
  QrtzCalendar QrtzCalendar = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteQrtzCalendarRequest {
  // The resource name of the QrtzCalendar to be deleted.
  string name = 1;
}
